# xgtag

./: 1  CMakeLists.txt  Makefile.in  ProjectHome.md  build.sh  config-h.in  configure  const.h  hardcopy.0  todo.txt  xtag.vim
action/: opt.c  opt.h  output.c  output.h  project.c  project.h  project_simple_opt.c  project_simple_opt.h  wparser.c  wparser.h  wpath.c  wpath.h
autom4te.cache/: output.0  traces.0
doc/: Makefile.in  global.info  global.ref  gozilla.ref  gtags-cscope.ref  gtags.ref  htags.ref  stamp-vti  version.texi
global/: Makefile.in  const.h  global.c
globash/: Makefile.in
gozilla/: Makefile.in
gtags/: Makefile.in  const.h  gtags.c  opt.h  project.c  project.h  wpath.c  wpath.h
gtags-cscope/: Makefile.in  const.h
htags/: Makefile.in  const.h
htags-refkit/: Makefile.in
icons/: Makefile.in
jquery/: Makefile.in
jquery/images/: Makefile.in
libdb/: Makefile.in
libglibc/: Makefile.in
libltdl/: Makefile.in
libparser/: C.c  Cpp.c  Makefile.in  c_def.h  c_res.h  cpp_def.h  cpp_res.h  parser.c
libutil/: Makefile.in  checkalloc.c  common.h  conf.c  config.h  dbop.c  dbop.h  die.h  find.c  format.h  gparam.h  gpathop.c  gpathop.h  gtagsop.c  langmap.h  pathconvert.c  strbuf.c  strbuf.h  strhash.c  token.c  token.h  version.c
plugin-factory/: Makefile.in
script/: Makefile.in
